--- a/package.json
+++ b/package.json
@@ -19,9 +19,36 @@
     "@angular/http": "^6.0.0",
     "@angular/platform-browser": "^6.0.0",
     "@angular/platform-browser-dynamic": "^6.0.0",
+    "@angular/pwa": "^0.6.3",
     "@angular/router": "^6.0.0",
+    "@angular/service-worker": "^6.0.0",
+    "@mapbox/geojson-area": "^0.2.2",
+    "@ngrx/effects": "^6.0.0-beta.3",
+    "@ngrx/entity": "^6.0.0-beta.3",
+    "@ngrx/router-store": "^6.0.0-beta.3",
+    "@ngrx/store": "^6.0.0-beta.3",
+    "@ngrx/store-devtools": "^6.0.0-beta.3",
+    "@ngx-translate/core": "^10.0.1",
+    "angular-tree-component": "^7.2.0",
+    "bootstrap": "^4.1.1",
     "core-js": "^2.5.4",
-    "rxjs": "^6.0.0",
+    "d3-color": "^1.2.0",
+    "d3-format": "^1.3.0",
+    "d3-scale": "^2.0.0",
+    "d3-time-format": "^2.1.1",
+    "dbf": "^0.1.4",
+    "file-saver": "^1.3.8",
+    "geojson": "^0.5.0",
+    "leaflet": "^1.3.1",
+    "leaflet.markercluster": "^1.3.0",
+    "ng2-dnd": "^5.0.2",
+    "ng2-dragula": "^1.5.0",
+    "ngrx-store-freeze": "^0.2.2",
+    "ngx-pagination": "^3.1.1",
+    "polylabel": "^1.0.2",
+    "rxjs": "^6.1.0",
+    "rxjs-compat": "^6.1.0",
+    "shp-write": "^0.3.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
