--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "geojson": "^0.5.0",
     "leaflet": "^1.3.1",
     "leaflet.markercluster": "^1.3.0",
+    "lodash": "^4.17.10",
     "ng2-dnd": "^5.0.2",
     "ng2-dragula": "^1.5.0",
     "ngrx-store-freeze": "^0.2.2",
