--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "@angular/router": "^6.0.0",
     "@angular/service-worker": "^6.0.0",
     "@mapbox/geojson-area": "^0.2.2",
-    "@ngrx/effects": "^6.0.0-beta.3",
-    "@ngrx/entity": "^6.0.0-beta.3",
-    "@ngrx/router-store": "^6.0.0-beta.3",
-    "@ngrx/store": "^6.0.0-beta.3",
-    "@ngrx/store-devtools": "^6.0.0-beta.3",
+    "@ngrx/effects": "^6.0.1",
+    "@ngrx/entity": "^6.0.1",
+    "@ngrx/router-store": "^6.0.1",
+    "@ngrx/store": "^6.0.1",
+    "@ngrx/store-devtools": "^6.0.1",
     "@ngx-translate/core": "^10.0.1",
     "angular-tree-component": "^7.2.0",
     "bootstrap": "^4.1.1",
@@ -58,7 +58,7 @@
     "@angular/compiler-cli": "^6.0.0",
     "@angular-devkit/build-angular": "~0.6.1",
     "typescript": "~2.7.2",
-    "@angular/cli": "~6.0.1",
+    "@angular/cli": "~6.0.5",
     "@angular/language-service": "^6.0.0",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
