--- a/angular.json
+++ b/angular.json
@@ -19,7 +19,18 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
             "assets": ["src/favicon.ico", "src/assets", "src/manifest.json"],
-            "styles": ["src/styles.css", "./node_modules/bootstrap/dist/css/bootstrap.css"],
+            "styles": [
+              {
+                "input": "node_modules/angular-tree-component/dist/angular-tree-component.css"
+              },
+              {
+                "input": "node_modules/bootstrap/dist/css/bootstrap.css"
+              },
+              {
+                "input": "node_modules/leaflet/dist/leaflet.css"
+              },
+              "src/styles.css"
+            ],
             "scripts": []
           },
           "configurations": {
