--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ngrx/store": "^6.0.1",
     "@ngrx/store-devtools": "^6.0.1",
     "@ngx-translate/core": "^10.0.1",
+    "@swimlane/ngx-dnd": "^4.0.2",
     "@turf/turf": "^5.1.6",
     "angular-tree-component": "^7.2.0",
     "bootstrap": "^4.1.1",
