--- a/src/manifest.json
+++ b/src/manifest.json
@@ -18,7 +18,7 @@
       "type": "image/png"
     },
     {
-      "src": "assets/icons/icon-128x128.png",
+      "src": "assets/icons/icon-128.png",
       "sizes": "128x128",
       "type": "image/png"
     },
@@ -28,7 +28,7 @@
       "type": "image/png"
     },
     {
-      "src": "assets/icons/icon-152x152.png",
+      "src": "assets/icons/icon-152.png",
       "sizes": "152x152",
       "type": "image/png"
     },
@@ -43,7 +43,7 @@
       "type": "image/png"
     },
     {
-      "src": "assets/icons/icon-512x512.png",
+      "src": "assets/icons/icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
