--- a/angular.json
+++ b/angular.json
@@ -13,11 +13,11 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/interactiveMap",
+            "outputPath": "dist/interactive-map",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
-            "tsConfig": "src/tsconfig.app.json",
+            "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
               "src/assets",
@@ -36,7 +36,7 @@
                 "input": "node_modules/leaflet/dist/leaflet.css"
               },
               {
-                "input": "node_modules/@swimlane/ngx-dnd/release/ngx-dnd.css"
+                "input": "node_modules/@swimlane/ngx-dnd/release/index.css"
               }
             ],
             "scripts": ["src/ee_api_js.js"]
@@ -65,19 +65,19 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "interactiveMap:build",
+            "browserTarget": "interactive-map:build",
             "proxyConfig": "proxy-config.json"
           },
           "configurations": {
             "production": {
-              "browserTarget": "interactiveMap:build:production"
+              "browserTarget": "interactive-map:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "interactiveMap:build"
+            "browserTarget": "interactive-map:build"
           }
         },
         "test": {
@@ -85,7 +85,7 @@
           "options": {
             "main": "src/test.ts",
             "polyfills": "src/polyfills.ts",
-            "tsConfig": "src/tsconfig.spec.json",
+            "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": ["src/styles.css"],
             "scripts": [],
@@ -109,7 +109,7 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "interactiveMap:serve"
+            "devServerTarget": "interactive-map:serve"
           }
         },
         "lint": {
@@ -122,7 +122,7 @@
       }
     }
   },
-  "defaultProject": "interactiveMap",
+  "defaultProject": "interactive-map",
   "cli": {
     "analytics": "fd3eb134-d619-4a11-b252-902bd90160df"
   }
