--- a/package.json
+++ b/package.json
@@ -30,27 +30,30 @@
     "@ngrx/store": "^9.0.0",
     "@ngrx/store-devtools": "^9.0.0",
     "@ngx-translate/core": "^10.0.1",
-    "@swimlane/ngx-dnd": "^4.0.0",
+    "@swimlane/dragula": "^3.8.0",
+    "@swimlane/ngx-dnd": "^8.1.0",
     "@turf/turf": "^5.1.6",
-    "angular-tree-component": "^7.2.0",
-    "bootstrap": "^4.1.1",
+    "@types/dragula": "^3.7.0",
+    "angular-tree-component": "^8.5.6",
+    "bootstrap": "^4.4.1",
     "core-js": "^2.5.4",
     "d2-utilizr": "^0.2.16",
     "d3-color": "^1.2.0",
     "d3-format": "^1.3.0",
     "d3-scale": "^2.0.0",
-    "d3-time-format": "^2.1.1",
+    "d3-time-format": "^2.2.3",
     "dbf": "^0.1.4",
     "file-saver": "^1.3.8",
     "geojson": "^0.5.0",
     "jszip": "^3.1.5",
-    "leaflet": "^1.3.1",
-    "leaflet.markercluster": "^1.3.0",
-    "lodash": "^4.17.10",
+    "leaflet": "^1.6.0",
+    "leaflet.markercluster": "^1.4.1",
+    "lodash": "^4.17.15",
     "ng2-dnd": "^5.0.2",
-    "ng2-dragula": "^1.5.0",
+    "ng2-dragula": "^2.1.1",
     "ngx-color-picker": "^6.3.3",
     "ngx-dhis2-http-client": "^1.0.0",
+    "ngx-dnd": "^2.0.0",
     "ngx-pagination": "^3.1.1",
     "polylabel": "^1.0.2",
     "rxjs": "^6.5.5",
@@ -58,14 +61,14 @@
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^9.1.0",
-    "@angular-devkit/build-angular": "~0.6.1",
-    "typescript": "~3.8.3",
+    "@angular-devkit/build-angular": "~0.901.0",
+    "@angular-devkit/build-ng-packagr": "^0.901.0",
     "@angular/cli": "~9.1.0",
+    "@angular/compiler-cli": "^9.1.0",
     "@angular/language-service": "^9.1.0",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
+    "@types/node": "^13.11.0",
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -76,6 +79,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
-    "tslint": "~5.9.1"
+    "tslint": "~5.9.1",
+    "typescript": "~3.8.3"
   }
 }
